--- a/src/styles/_override_variables.less
+++ b/src/styles/_override_variables.less
@@ -1,6 +1,6 @@
 // Here you can find all the default antd variables
 // https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
-
+@import '../_override_variables.less';
 // base override
 @background-color-light: rgba(1, 80, 154, 0.05);
 
@@ -49,6 +49,7 @@
 // Button
 @btn-font-weight: 600;
 
+@primary-color: #1890ff;
 @btn-ghost-color: @primary-color;
 @btn-ghost-border: @primary-color;
 
