--- a/src/styles/themes/main.less
+++ b/src/styles/themes/main.less
@@ -1,7 +1,9 @@
 // default antd styles
-// @import 'node_modules/antd/lib/style/themes/default.less';
-@import 'node_modules/antd/dist/antd.variable.less';
+//@import 'node_modules/antd/lib/style/themes/variable.less';
+//@import 'node_modules/antd/dist/antd.variable.less';
+
 
 // common variables
+//@import 'antd/dist/antd.variable.less';
 @import '../_override_variables.less';
 
