--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,12 @@ All colors MUST be HSL.
     --overlay: 220 20% 10%;
     --overlay-foreground: 0 0% 100%;
     --input-icon: 220 10% 60%;
+
+    --chart-1: 340 82% 52%;
+    --chart-2: 217 91% 60%;
+    --chart-3: 142 71% 45%;
+    --chart-4: 47 95% 50%;
+    --chart-5: 262 83% 58%;
   }
 
   .dark {
@@ -94,6 +100,12 @@ All colors MUST be HSL.
     --overlay: 220 20% 10%;
     --overlay-foreground: 0 0% 100%;
     --input-icon: 220 10% 60%;
+
+    --chart-1: 340 82% 52%;
+    --chart-2: 217 91% 65%;
+    --chart-3: 142 71% 55%;
+    --chart-4: 47 95% 65%;
+    --chart-5: 262 83% 70%;
   }
 }
 
